LUCENE-9247: Fix compile error.